--- a/temp_3.HTML
+++ b/temp_3.HTML
@@ -35,7 +35,7 @@
             </div>
             <ul class="links">
               <li>
-                <a href="./CSS&HTML_templite 4/temp_4.html" target=_blank><i class="far fa-comments fa-fw"></i>
+                <a href="https://aldozdoz.github.io/appl4/temp_4.html" target=_blank><i class="far fa-comments fa-fw"></i>
                   application 4</a>
               </li>
       
